# motoilet_whisper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/: basic_data_type.h
src/main/app_layer/: app_layer.c  app_layer.h
src/main/data_layer/: array_buffer.c  array_buffer.h  crc.c  crc.h  data_layer.c  data_layer.h  ring_buffer.c  ring_buffer.h
src/test/data_layer/: array_buffer_test.c  data_layer_test.c  integration_test.c  ring_buffer_test.c
